# nix-config

./: .git-blame-ignore-revs  .gitignore  .neoconf.json  .sops.yaml  README.md  configuration.nix  env-example.nix  env.nix  flake.nix  hardware-configuration.nix  home.nix
.nas/: config.pkl
files/.claude/: statusline-command.sh
files/.config/: alacritty.yml  starship.toml
files/.config/albert/: albert.conf
files/.config/cryptow/: profiles.yaml
files/.config/direnv/: direnvrc
files/.config/ghostty/: config  (+1 more)
files/.gnupg/: gpg-agent.conf
home-manager/: flake.nix  home.nix
modules/boot/: default.nix
modules/configuration/: default.nix
modules/fonts/: default.nix
modules/gui/: default.nix
modules/hardware-configuration/: default.nix
modules/home/: default.nix  home.nix
modules/keyboard/: default.nix
modules/locale/: default.nix
modules/networking/: default.nix
modules/nix/: default.nix
modules/overlays/: default.nix
modules/overlays/my-xmonad/: build  my-xmonad.cabal  my-xmonad.hs
modules/programs/: default.nix
modules/qemu/: default.nix
modules/sound/: default.nix
modules/syslog/: default.nix
modules/wsl/: default.nix
pkgs/Cica/: default.nix
pkgs/amazon-corretto17/: default.nix
pkgs/aws2-wrap/: default.nix
pkgs/illusion/: default.nix
pkgs/my-fzf/: default.nix  my-fzf.ts
pkgs/my-xmobar/: .gitignore  default.nix  flake.nix  my-xmobar.cabal  my-xmobar.hs  shell.nix
pkgs/my-xmonad/: default.nix  flake.nix  my-xmonad.hs  shell.nix  xmonad-session-rc
pkgs/udev-gothic/: default.nix
secrets/: common.yaml
(+75 files in other folders)
