name:          my-xmonad
version:       0.1.0.0
build-type:    Simple
cabal-version: >=1.10

executable xmonad-x86_64-linux
  main-is:          my-xmonad.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O0
  build-depends:
      base
    , containers
    , filepath
    , GenericPretty
    , process
    , rio
    , split
    , transformers
    , unix
    , X11
    , xmonad
    , xmonad-contrib

  default-language: Haskell2010
